Adjusting css style to smaller screens

--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@
 }
 
 .main {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     
     background-repeat: no-repeat;
     background-size: cover;
@@ -49,7 +49,7 @@
     
     background-color: var(--game-layout-color);
     width: 520px;
-    height: 100vh;
+    height: 100%;
 
 }
 
